# minipack-rs

./: Cargo.toml  README.md
js/: index.js
js/dir/: file.js
js/other_dir/: other_file.js
src/: main.rs  swc_solution.rs
